--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/global-contacts.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/global-contacts.scss
@@ -10,9 +10,33 @@
     }
 
     &__container {
+        .w-100 {
+            @include media-breakpoint-up(sm) {
+                width: 50%;
+            }
+        }
+
         #{$self} {
             &__image-container {
-                
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+
+            &__detail {
+
+                & > * {
+                    max-width: 40ch;
+                }
+
+                gap: 2.5rem;
+
+                #{$self}__info {
+                    .c2 {
+                        padding-bottom: 1.5rem;
+                    }
+                }
             }
         }
     }
