--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/components/header.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/components/header.scss
@@ -7,7 +7,11 @@
     $self: ".header";
 
     padding-block: 0.875rem;
-    margin-inline: clamp(1.75rem, 1.75rem + 0.369vw, 5rem);
+    padding-inline: clamp(1.75rem, 1.75rem + 0.369vw, 5rem);
+
+    @include media-breakpoint-up(lg){
+        padding-inline: 5rem;
+    }
 
     &__logo-container {
         width: clamp(85px, 10vw, 120px);
@@ -67,7 +71,7 @@
                 display: flex;
                 flex-direction: column;
 
-                @include media-breakpoint-up(md) {
+                @include media-breakpoint-up(lg) {
                     flex-direction: row;
                     align-items: center;
                     flex-grow: 0;
@@ -95,7 +99,7 @@
                     .nav-item {
                         text-wrap: nowrap;
 
-                        @include media-breakpoint-down(md) {
+                        @include media-breakpoint-down(lg) {
                             padding: 1.5rem;
                             border-bottom: 1px solid $neutral-100;
                         }
