--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/contact-section.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/contact-section.scss
@@ -1,14 +1,22 @@
 @import '../custom.scss';
 @import '../../.././node_modules/bootstrap/scss/forms';
-.contact__section{
-    .container{
-        
-        .contact__form{
+
+.contact__section {
+    .container {
+        max-width: 100%;
+
+        .contact__title .h2 {
+            max-width: 19ch;
+        }
+
+        .contact__form {
             .form-label {
                 width: 100%;
                 margin-bottom: 24px;
             }
-            .form-control, .form-select{
+
+            .form-control,
+            .form-select {
                 padding-block: 14px;
                 color: $neutral-600;
                 border-color: $neutral-600;
@@ -18,51 +26,30 @@
                 margin-top: 3rem;
             }
 
-            .form-check-input:checked {
-                background-color: $neutral-600;
-                border-color: $neutral-600;
-            }
+            .form-check-input {
+                &:checked {
+                    background-color: $neutral-600;
+                    border-color: $neutral-600;
+                }
 
-            input[type="date"]::-webkit-calendar-picker-indicator {
-                display: none;
-            }
-
-            input[type="date"]::-webkit-calendar-picker-indicator {
-                display: none;
-            }
-            
-            /* Style for the placeholder text */
-            #move_in_date_placeholder {
-                position: absolute;
-                left: 10px;
-                top: 10px;
-                color: gray;
-                pointer-events: none;
-                transition: 0.2s ease;
-            }
-            
-            /* Hide the placeholder text when the input is focused or has a value */
-            input[type="date"]:focus + #move_in_date_placeholder,
-            input[type="date"]:not(:placeholder-shown) + #move_in_date_placeholder {
-                display: none;
-            }
-            
-            /* Optional: Add padding to the input field to make space for the placeholder */
-            input[type="date"] {
-                padding-left: 10px;
+                &:focus {
+                    box-shadow: none;
+                }
             }
         }
 
         @include media-breakpoint-up(sm) {
             gap: 5rem;
-            .contact__title{
+
+            .contact__title {
                 width: 45%;
-                .subtitle{
-                    width: 55ch;
+
+                .subtitle {
+                    max-width: 55ch;
                 }
             }
 
-            .contact__form{
+            .contact__form {
                 width: 50%;
             }
         }
